crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__workflow_js_advance_call_stub-7.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: replay
---
{
  "captured_writes": [],
  "return_value": {
    "ok": {
      "type": "result<string, string>",
      "value": {
        "ok": "\"hello\""
      }
    }
  },
  "version": 6
}
