crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__workflow_js_replay_call_stub.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: replay.next_events
---
[
  {
    "type": "join_set_create",
    "join_set_id": "g:1"
  },
  {
    "type": "join_set_request",
    "join_set_id": "g:1",
    "request": {
      "type": "child_execution_request",
      "child_execution_id": "E_00000000000000000000000000.g:1_1",
      "target_ffqn": "testing:stub-activity/activity.foo",
      "params": [
        "test-input"
      ],
      "result": {
        "Ok": null
      }
    }
  },
  {
    "type": "stub",
    "target_execution_id": "E_00000000000000000000000000.g:1_1",
    "retval_hash": "011f9f1089426c4e2d1d6c761441181fba8e690f2baeccde7036a92c7d49d6b0e1",
    "result": {
      "Err": "execution_not_found"
    }
  },
  {
    "type": "join_next",
    "join_set_id": "g:1",
    "run_expires_at": "1970-01-01T00:00:00Z",
    "requested_ffqn": null,
    "closing": true
  }
]
